--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_curso_calificaciones.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_curso_calificaciones.html
@@ -7,7 +7,16 @@
 
 <div class="container-fluid">
 
-
+<div class="col-11 ml-5 mt-4 mb-5">
+  <form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    <div class="form-group">
+      <label for="SubirNotas">Seleccione el archivo de notas...</label>
+      <input type="file" class="form-control-file" id="SubirNotas" name="notas">
+      <button type="submit" class="btn btn-primary mt-3">Subir</button>
+    </div>
+  </form>
+</div>
 
 <div class="col-11 ml-5">
   <div class="table-responsive">
