--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_notas.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_notas.html
@@ -11,103 +11,42 @@
 
 <div class="col-11 ml-5 mt-5">
 
+{% for ramo in ramos %}
   <div class="table-responsive">
     <table class="table  table-striped table-light">
       <thead>
         <tr>
           <th scope="col">Asignatura</th>
-          <th scope="col">P.T</th>
-          <th scope="col">N.1</th>
-          <th scope="col">N.2</th>
-          <th scope="col">N.3</th>
-          <th scope="col">N.4</th>
-          <th scope="col">N.5</th>
-          <th scope="col">N.6</th>
-          <th scope="col">N.7</th>
-          <th scope="col">N.8</th>
-          <th scope="col">N.9</th>
-          <th scope="col">N.10</th>
+          {% for entrada in assignments %}
+            <th>{{entrada}}</th>
+            {% if ramo.ramo == 'Lenguaje' %}
+              <th scope="col">holaaaaa</th>
+            {% endif %}
+          {% endfor %}
           <th scope="col">Promedio</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <th scope="row">Lenguaje</th>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">Matematicas</th>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">Historia</th>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">Ciencias Naturales</th>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <th scope="row">Inglés</th>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
+
+          <tr>
+            <th scope="row">{{ramo}}</th>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+
       </tbody>
     </table>
+    {% endfor %}
   </div>
 </div>
 
