--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_notas.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_notas.html
@@ -7,48 +7,43 @@
 
 <div class="container-fluid">
 
+  <div class="col-11 ml-5 mt-5">
 
-
-<div class="col-11 ml-5 mt-5">
-
-{% for ramo in ramos %}
-  <div class="table-responsive">
-    <table class="table  table-striped table-light">
-      <thead>
-        <tr>
-          <th scope="col">Asignatura</th>
-          {% for entrada in assignments %}
-            <th>{{entrada}}</th>
-            {% if ramo.ramo == 'Lenguaje' %}
-              <th scope="col">holaaaaa</th>
-            {% endif %}
-          {% endfor %}
+  {% for ramo in ramos %}
+    <div class="table-responsive">
+      <table class="table  table-striped table-light">
+        <thead>
+          <tr>
+            <th scope="col">Asignatura</th>
+            {% for entrada in assignments %}
+              {% if ramo.ramo == entrada.ramos %}
+                {% if entrada.curso.curso == estudiante.0.curso %}
+                  <th scope="col">{{ entrada.titulo }}</th>
+                {% endif %}
+              {% endif %}
+            {% endfor %}
           <th scope="col">Promedio</th>
         </tr>
       </thead>
       <tbody>
-
           <tr>
             <th scope="row">{{ramo}}</th>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
-            <td></td>
+              {% for entrada in assignments %}
+                {% if ramo.ramo == entrada.ramos %}
+                  {% for nota in notas %}
+                    {% if estudiante.0.id == nota.estudiante.id %}
+                      {% if nota.assignment.titulo == entrada.titulo %}
+                        <td>{{ nota.nota }} </td>
+                      {% endif %}
+                    {% endif %}
+                  {% endfor %}
+                {% endif %}
+              {% endfor %}
           </tr>
-
       </tbody>
     </table>
     {% endfor %}
   </div>
 </div>
-
 </div>
 {% endblock %}
