--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_notas.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_notas.html
@@ -8,9 +8,8 @@
 <div class="container-fluid">
 
   <div class="col-11 ml-5 mt-5">
-
-  {% for ramo in ramos %}
     <div class="table-responsive">
+    {% for ramo in ramos %}
       <table class="table  table-striped table-light">
         <thead>
           <tr>
@@ -18,32 +17,51 @@
             {% for entrada in assignments %}
               {% if ramo.ramo == entrada.ramos %}
                 {% if entrada.curso.curso == estudiante.0.curso %}
-                  <th scope="col">{{ entrada.titulo }}</th>
+                  <th scope="col">{{ entrada.titulo }} </th>
                 {% endif %}
               {% endif %}
             {% endfor %}
-          <th scope="col">Promedio</th>
-        </tr>
-      </thead>
-      <tbody>
+            <th scope="col">Promedio</th>
+          </tr>
+        </thead>
+        <tbody>
           <tr>
             <th scope="row">{{ramo}}</th>
-              {% for entrada in assignments %}
-                {% if ramo.ramo == entrada.ramos %}
+
                   {% for nota in notas %}
+
                     {% if estudiante.0.id == nota.estudiante.id %}
-                      {% if nota.assignment.titulo == entrada.titulo %}
-                        <td>{{ nota.nota }} </td>
-                      {% endif %}
+
+                      {% for entrada in assignments %}
+
+                        {% if nota.curso_nota == entrada.curso.curso %}
+
+                          {% if ramo.ramo == entrada.ramos %}
+
+                            {% if nota.ramo_nota == entrada.ramos %}
+
+                              {% if nota.titulo_nota == entrada.titulo %}
+
+                                  <th scope="col">{{nota.nota}}</th>
+
+                              {% endif %}
+
+                            {% endif %}
+
+                          {% endif %}
+
+                        {% endif %}
+
+                      {% endfor %}
+
                     {% endif %}
+
                   {% endfor %}
-                {% endif %}
-              {% endfor %}
           </tr>
-      </tbody>
-    </table>
-    {% endfor %}
+        </tbody>
+      </table>
+      {% endfor %}
+    </div>
   </div>
-</div>
 </div>
 {% endblock %}
