Agregados los modelos de observaciones
-Aún falta poder agregar a la database desde el frontend

--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno.html
@@ -28,7 +28,7 @@
     <div class="col-9 ml-sm-5 mt-3 mb-3 col-sm-6">
         <a type="button" class="btn btn-primary btn-lg btn-block" href="{% url 'alumno_notas' alumno_id=estudiante.0.id %}">Ver Calificaciones</a>
         <a type="button" class="btn btn-primary btn-lg btn-block" href="{% url 'alumno_info' user=estudiante.0.id %}">Ver Información Personal</a>
-        <a type="button" class="btn btn-primary btn-lg btn-block" href="{% url 'alumno_progreso' %}">Ver Progreso</a>
+        <a type="button" class="btn btn-primary btn-lg btn-block" href="{% url 'alumno_progreso' alumno_id=estudiante.0.id %}">Ver Progreso</a>
     </div>
   </div>
 
