--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_info.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_info.html
@@ -84,7 +84,7 @@
       <div class="form-group">
         <label for="exampleFormControlTextarea1">Observaciones:</label>
         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3">
-          {{estudiante.0.observaciones}}
+          {{estudiante.0.observacion}}
         </textarea>
       </div>
       </fieldset>
