--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_progreso.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_progreso.html
@@ -1,19 +1,24 @@
 {% extends 'base.html' %}
 {% load static %}
-
-{% block title %} Calificaciones {% endblock %}
+{% load i18n %}
+{% block title %} Progreso {% endblock %}
 
 {% block content %}
 
 <div class="container-fluid">
 
+<div class="col-11 ml-5 mt-5">
+  <div class="jumbotron">
+    <h1>Tabla de Progreso de {{estudiante.0}}</h1>
+    <hr class="my-4">
+    <p class="lead">Aquí puede ver las observaciones que ha hecho a {{ estudiante.0 }}</p>
+  </div>
 
-
-<div class="col-11 ml-5">
   <div class="table-responsive">
-    <table class="table  table-striped table-light">
+    <table id="Tabla_obs" class="table table-striped table-light">
       <thead>
         <tr>
+          <th onclick="sortTable(0)" scope="col">id</th>
           <th scope="col">Fecha</th>
           <th scope="col">Profesor(a)</th>
           <th scope="col">Asignatura</th>
@@ -21,45 +26,37 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <td>25/03/2020</td>
-          <td>Pedro Yañez</td>
-          <td>Matematicas</td>
-          <td>El niño peleo en clases con un compañero</td>
-        </tr>
-        <tr>
-          <td>27/03/2020</td>
-          <td>Daniel Sepúlveda</td>
-          <td>Fisica</td>
-          <td>
-            El niño se comporto excelente en clases, participo mucho y fue amigable
-            con su compañeros. Se ve el esfuerzo de los padres en enseñarle
-            buenos modales al juan.
-          </td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
+      
+      {% language 'es' %}
+      
+        {% for obs in obs_alumno %}
+
+          {% if obs.alumno.id == estudiante.0.id %}
+
+            {% if obs.profesor.nom_usuario.username == user.username %}
+
+              <tr>
+                <td>{{ obs.id }}</td>
+                <td>{{ obs.fecha_observacion }}</td>
+                <td>{{ obs.profesor }}</td>
+                <td>{{ obs.ramos }}</td>
+                <td>{{ obs.observacion }}</td>
+              </tr>
+
+            {% endif %}
+
+          {% endif %}
+
+        {% endfor %}
+
+      {% endlanguage %}
+
       </tbody>
     </table>
   </div>
 </div>
-
-
 </div>
+
+<script src="{% static 'js/table_sort.js' %}"></script>
+
 {% endblock %}
