--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos.html
@@ -11,7 +11,7 @@
     <div class="col-4">
       <div class="jumbotron">
         <h1 class="display-4">Mis Ramos:</h1>
-        <h5>Seleccione que ramo quiere ver:</h5>
+        <p class="lead">Seleccione que ramo quiere ver:</p>
           <div class="btn-group btn-group-toggle" data-toggle="buttons">
               <form action="#" method="get">
               {% for ramo in ramos %}
@@ -24,7 +24,7 @@
         <hr class="my-4">
         <div class="list-group" id="list-tab-{{forloop.counter}}" role="tablist">
           <h1 class="display-4">Mis Cursos:</h1>
-          <h5>Seleccione que curso quiere ver:</h5>
+          <p class="lead">Seleccione que curso quiere ver:</p>
           {% for curso in cursos %}
             <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home-{{forloop.counter}}" role="tab" aria-controls="home">{{curso}}</a>
           {% endfor %}
