--- a/ProyectoIntro/plantillas/profesores/test.html
+++ b/ProyectoIntro/plantillas/profesores/test.html
@@ -1,99 +1,50 @@
-
-
 <!DOCTYPE html>
-<html lang="en">
 <head>
-  <title>Bootstrap Example</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <title>
+        How to get selected value in dropdown
+        list using JavaScript?
+    </title>
 </head>
+
 <body>
+    <h1 style="color: green">
+        GeeksForGeeks
+    </h1>
 
-  <div class="container-fluid">
+    <b>
+        How to get selected value in dropdown
+        list using JavaScript?
+    </b>
 
-    <div class="row ml-3 mt-3">
-      <div class="col-4">
-        <div class="jumbotron">
-          <h1 class="display-4">Mis Ramos:</h1>
-          <h5>Seleccione que ramo quiere ver:</h5>
-            <div class="btn-group btn-group-toggle" data-toggle="buttons">
-                <form action="#" method="get">
-                {% for ramo in ramos %}
-                  <label class="btn btn-primary">
-                    <input type="submit" class="btn btn-primary" value="{{ramo}}" name="seleccion">
-                  </label>
-                {% endfor %}
-              </form>
-            </div>
-          <hr class="my-4">
-          <div class="list-group" id="list-tab-{{forloop.counter}}" role="tablist">
-            <h1 class="display-4">Mis Cursos:</h1>
-            <h5>Seleccione que curso quiere ver:</h5>
-            {% for curso in cursos %}
-              <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home-{{forloop.counter}}" role="tab" aria-controls="home">{{curso}}</a>
-            {% endfor %}
-          </div>
-      </div>
-    </div>
+    <p>
+        Select one from the given options:
+        <select id="select1">
+            <option value="free">Free</option>
+            <option value="basic">Basic</option>
+            <option value="premium">Premium</option>
+        </select>
+    </p>
 
-      <div class="col-8">
-        <div class="tab-content" id="nav-tabContent">
-          {% for curso in cursos %}
-          <div class="tab-pane fade" id="list-home-{{forloop.counter}}" role="tabpanel" aria-labelledby="list-home-list">
+    <p>
+        The value of the option selected is:
+        <span class="output"></span>
+    </p>
 
-            <div class="float-none">
-              <a href="{% url 'curso_calificaciones' %}" class="btn btn-primary" role="button">Calificaciones Curso</a>
-              <a href="{% url 'obs_por_curso' %}" class="btn btn-primary" role="button">Progreso Curso</a>
-            </div>
+    <button onclick="getOption()">
+        Check option
+    </button>
 
-            <input type="text" id="filtro" onkeyup="filtrarNombres()" placeholder="Buscar alumno...">
-            <div class="table-responsive">
-              <table  class="table table-striped table-light table-sm" cellspacing="0" width="100%" >
-                <thead>
-                  <th class="th-sm">Id</th>
-                  <th class="th-sm">Nombre</th>
-                  <th class="th-sm">Apellido</th>
-                  <th class="th-sm">Curso</th>
-                </thead>
+    <script type="text/javascript">
+        function getOption() {
+            selectElement =
+                    document.querySelector('#select1');
 
-                <tbody id="tablaAlumnos">
-                  {% for estudiante in estudiantes %}
+            output = selectElement.value;
 
-                      <tr style="transform: rotate(0);">
-                        <th scope="row"><a href="{% url 'alumno' user=estudiante.id %}" class="stretched-link">{{estudiante.id}}</a></th>
-                        <td>{{estudiante.nombres}}</td>
-                        <td>{{estudiante.apellidos}}</td>
-                        <td>{{estudiante.curso}}</td>
-                      </tr>
-
-                  {% endfor %}
-                </tbody>
-              </table>
-            </div>
-
-          </div>
-          {% endfor %}
-        </div>
-      </div>
-    </div>
-
-  </div>
-
-<script>
-$(document).ready(function(){
-  $("#filtro").on("keyup", function() {
-    var value = $(this).val().toLowerCase();
-    $("#tablaAlumnos tr").filter(function() {
-      $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-    });
-  });
-});
-</script>
-
-
+            document.querySelector('.output').textContent
+                    = output;
+        }
+    </script>
 </body>
-</html>
+
+</html>   
