--- a/ProyectoIntro/plantillas/superior/barra.html
+++ b/ProyectoIntro/plantillas/superior/barra.html
@@ -27,6 +27,7 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
           <a class="dropdown-item" href="{% url 'perfil_profesor' %}">Cuenta</a>
           <a class="dropdown-item" href="{% url 'cursos' %}">Ver Cursos</a>
+          <a class="dropdown-item" href="{% url 'obs_por_curso' %}">Agregar Observaciones</a>
           <a class="dropdown-item" href="#">Ayuda</a>
           <a class="dropdown-item" href="{% url 'logout' %}">Salir</a>
         </div>
