--- a/ProyectoIntro/plantillas/base.html
+++ b/ProyectoIntro/plantillas/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js%22%3E"></script>
 
     <title>
       {% block title %} {% endblock %}
