--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_agregar_evaluaciones.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_agregar_evaluaciones.html
@@ -8,7 +8,7 @@
 
 <div class="container mt-3">
 	<div class="jumbotron">
-		<h4>Seleccione un curso y un(a) alumno(a) para agregar observacion</h4>
+		<h4>Seleccione un curso para agregar Evaluacion</h4>
 		<hr class="my-4">
 		<div class="row">
 			<div class="col-sm">
@@ -26,28 +26,10 @@
 				</form>
 			</div>
 		</div>
-
-		<hr class="my-4">
-		<div class="row">
-			<div class="col-sm">
-				<form action="#" method="get" id="alumno">
-					<select onchange="this.form.submit()" name="seleccion_alumno" class="custom-select" form="alumno" value="2">
-						<option >Seleccione un alumno(a)</option>
-						{% for alumno in alumnos %}
-							{% if alumno == alumno_selected %}
-								<option selected value="{{alumno}}">{{alumno}}</option>
-							{% else %}
-								<option value="{{alumno}}">{{alumno}}</option>
-							{% endif %}
-						{% endfor %}
-					</select>
-				</form>
-			</div>
-		</div>
-		{% if alumno_selected %}
+		{% if curso_selected %}
 		<hr class="my-4">
 
-	<p class="lead">Has seleccionado al alumno: {{alumno_selected}}</p>
+		<p class="lead">Has seleccionado el Curso: {{curso_selected}}</p>
 
 
 		<div class="row mt-3 mb-3">
@@ -55,14 +37,15 @@
 				<form method="POST">
 					{% csrf_token %}
 					{{ form|crispy }}
-					<input type="submit" class="btn btn-primary float-right" value="Guardar"/>
+					<input type="submit"  class="btn btn-primary float-right" value="Guardar"/>
 				</form>
 			</div>
 		</div>
+
 	</div>
 	{% endif %}
-
 </div>
+
 
 
 {% endblock %}
