--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_notas.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_notas.html
@@ -10,12 +10,13 @@
   <div class="col-11 ml-5 mt-5">
     <div class="table-responsive">
     {% for ramo in ramos %}
+
       <table class="table  table-striped table-light">
         <thead>
           <tr>
             <th scope="col">Asignatura</th>
             {% for entrada in assignments %}
-              {% if ramo.ramo == entrada.ramos %}
+              {% if ramo.ramo == entrada.ramo %}
                 {% if entrada.curso.curso == estudiante.0.curso %}
                   <th scope="col">{{ entrada.titulo }} </th>
                 {% endif %}
@@ -36,13 +37,13 @@
 
                         {% if nota.curso_nota == entrada.curso.curso %}
 
-                          {% if ramo.ramo == entrada.ramos %}
+                          {% if ramo.ramo == entrada.ramo %}
 
-                            {% if nota.ramo_nota == entrada.ramos %}
+                            {% if nota.ramo_nota == entrada.ramo %}
 
                               {% if nota.titulo_nota == entrada.titulo %}
 
-                                  <th scope="col">{{nota.nota}}</th>
+                                  <td class="subjects" scope="col">{{nota.nota}}</td>
 
                               {% endif %}
 
@@ -57,6 +58,7 @@
                     {% endif %}
 
                   {% endfor %}
+                  <td id="prom"> </td>
           </tr>
         </tbody>
       </table>
