--- a/ProyectoIntro/plantillas/profesores/test.html
+++ b/ProyectoIntro/plantillas/profesores/test.html
@@ -4,47 +4,46 @@
         How to get selected value in dropdown
         list using JavaScript?
     </title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js%22%3E"></script>
 </head>
-
-<body>
-    <h1 style="color: green">
-        GeeksForGeeks
-    </h1>
-
-    <b>
-        How to get selected value in dropdown
-        list using JavaScript?
-    </b>
-
-    <p>
-        Select one from the given options:
-        <select id="select1">
-            <option value="free">Free</option>
-            <option value="basic">Basic</option>
-            <option value="premium">Premium</option>
-        </select>
-    </p>
-
-    <p>
-        The value of the option selected is:
-        <span class="output"></span>
-    </p>
-
-    <button onclick="getOption()">
-        Check option
-    </button>
-
-    <script type="text/javascript">
-        function getOption() {
-            selectElement =
-                    document.querySelector('#select1');
-
-            output = selectElement.value;
-
-            document.querySelector('.output').textContent
-                    = output;
+<script>
+  $(document).ready(function()
+  {
+    $('tr').each(function()
+    {
+      var totnotas=0;
+      $(this).find('.subjects').each(function()
+      {
+        var notas=$(this).text();
+        if(notas.length!==0){
+          totnotas+=parseFloat(notas);
         }
-    </script>
+      });
+      $(this).find('#prom').html('= '+totnotas);
+    });
+  });
+</script>
+<body>
+  <table class="table  table-striped table-light">
+    <thead>
+      <tr>
+        <th scope="col">Asignatura</th>
+          <th scope="col">lenguaje </th>
+          <th scope="col">mate </th>
+          <th scope="col">ingles</th>
+        <th scope="col">Promedio</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <th scope="row"></th>
+          <td class="subjects" scope="col">1</td>
+          <td class="subjects" scope="col">21</td>
+          <td class="subjects" scope="col">13</td>
+          <td id="prom"> </td>
+      </tr>
+    </tbody>
+  </table>
 </body>
 
-</html>   
+</html>
