--- a/ProyectoIntro/plantillas/superior/barra.html
+++ b/ProyectoIntro/plantillas/superior/barra.html
@@ -28,14 +28,10 @@
           <a class="dropdown-item" href="{% url 'perfil_profesor' %}">Cuenta</a>
           <a class="dropdown-item" href="{% url 'cursos' %}">Ver Cursos</a>
           <a class="dropdown-item" href="{% url 'obs_por_curso' %}">Agregar Observaciones</a>
-          <a class="dropdown-item" href="#">Ayuda</a>
-          <a class="dropdown-item" href="{% url 'logout' %}">Salir</a>
+          <a class="dropdown-item" href="{% url 'agregar_evaluaciones' %}">Agregar Evaluaciones</a>
+          <a class="dropdown-item" href="{% url 'agregar_notas' %}">Agregar Notas</a>
+          <a class="dropdown-item" href="{% url 'logout' %}">Cerrar Sesión</a>
         </div>
-      </li>
-    </ul>
-    <ul class="navbar-nav ml-auto">
-      <li  class="nav-item" >
-        <a href="{% url 'logout' %}"style="color:white;">Cerrar Sesión</a>
       </li>
     </ul>
     </div>
