--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_notas.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_notas.html
@@ -1,67 +1,106 @@
-{% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Calificaciones {% endblock %}
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
+<head>
 
-{% block content %}
+  <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 
-<div class="container-fluid">
+  <title> Calificaciones </title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  <script>$(document).ready(function()
+        {
+            $('tr').each(function()
+            {
+            var count = 0;
+                var totmarks = 0;
+                $(this).find('.subjects').each(function()
+                {
+                    var marks=$(this).text();
+                    if(marks.lenght!==0)
+                    {
+                        totmarks+=parseFloat(marks);
+                        count+=1;
+                    }
+                });
+                $(this).find('#TotMarks').html((totmarks/count).toFixed(1));
+            });
+    });</script>
 
-  <div class="col-11 ml-5 mt-5">
-    <div class="table-responsive">
-    {% for ramo in ramos %}
-      <table class="table  table-striped table-light">
-        <thead>
-          <tr>
-            <th scope="col">Asignatura</th>
-            {% for entrada in assignments %}
-              {% if ramo.ramo == entrada.ramos %}
-                {% if entrada.curso.curso == estudiante.0.curso %}
-                  <th scope="col">{{ entrada.titulo }} </th>
+  <link rel="stylesheet" href="{% static 'css/base.css' %}">
+
+</head>
+
+<body>
+  {% include "superior/Encabezado.html" %}
+  {% include "superior/barra.html" %}
+  
+  <div class="container-fluid">
+    <div class="col-11 ml-5 mt-5">
+      <div class="table-responsive">
+      {% for ramo in ramos %}
+        <table class="table  table-striped table-light">
+          <thead>
+            <tr>
+              <th scope="col">Asignatura</th>
+              {% for entrada in assignments %}
+                {% if ramo.ramo == entrada.ramos %}
+                  {% if entrada.curso.curso == estudiante.0.curso %}
+                    <th scope="col">{{ entrada.titulo }} </th>
+                  {% endif %}
                 {% endif %}
-              {% endif %}
-            {% endfor %}
-            <th scope="col">Promedio</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">{{ramo}}</th>
-
-                  {% for nota in notas %}
-
-                    {% if estudiante.0.id == nota.estudiante.id %}
-
-                      {% for entrada in assignments %}
-
-                        {% if nota.curso_nota == entrada.curso.curso %}
-
-                          {% if ramo.ramo == entrada.ramos %}
-
-                            {% if nota.ramo_nota == entrada.ramos %}
-
-                              {% if nota.titulo_nota == entrada.titulo %}
-
-                                  <th scope="col">{{nota.nota}}</th>
-
+              {% endfor %}
+              <th scope="col">Promedio</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th scope="row">{{ramo}}</th>
+  
+                    {% for nota in notas %}
+  
+                      {% if estudiante.0.id == nota.estudiante.id %}
+  
+                        {% for entrada in assignments %}
+  
+                          {% if nota.curso_nota == entrada.curso.curso %}
+  
+                            {% if ramo.ramo == entrada.ramos %}
+  
+                              {% if nota.ramo_nota == entrada.ramos %}
+  
+                                {% if nota.titulo_nota == entrada.titulo %}
+  
+                                    <td class="subjects">{{nota.nota}}</td>
+  
+                                {% endif %}
+  
                               {% endif %}
-
+  
                             {% endif %}
-
+  
                           {% endif %}
-
-                        {% endif %}
-
-                      {% endfor %}
-
-                    {% endif %}
-
-                  {% endfor %}
-          </tr>
-        </tbody>
-      </table>
-      {% endfor %}
+  
+                        {% endfor %}
+  
+                      {% endif %}
+  
+                    {% endfor %}
+                    <td id="TotMarks"></td>
+            </tr>
+          </tbody>
+        </table>
+        {% endfor %}
+      </div>
     </div>
   </div>
-</div>
-{% endblock %}
+
+  <script src="{% static 'js/jquery-3.4.1.slim.min.js' %}"></script>
+  <script src="{% static 'js/popper.min.js' %}"></script>
+  <script src="{% static 'js/bootstrap.js' %}"></script>
+
+</body>
+
+</html>
