--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_info.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_info.html
@@ -17,11 +17,6 @@
       {% endif %}
       <div class="card-body text-primary">
         <h5 class="card-title">Perfil Alumno</h5>
-
-      <ul class="list-group list-group-flush">
-        <li class="list-group-item">{{estudiante.0}}</li>
-        <li class="list-group-item">{{estudiante.0.curso}}</li>
-      </ul>
     </div>
     </div>
   </div>
@@ -29,12 +24,19 @@
   <div class="col-9 ml-sm-5 mt-3 mb-3 col-sm-6">
     <div class="jumbotron">
 
-
+    <h1>Datos Personales</h1>
+    <hr class="my-4">
     <form>
       <div class="form-group row">
         <label for="text" class="col-sm-2 col-form-label">Nombre:</label>
         <div class="col-sm-10">
           <input style="background-color: white" type="text" readonly class="form-control" id="text" value="{{estudiante.0}}" >
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="text" class="col-sm-2 col-form-label">Curso:</label>
+        <div class="col-sm-10">
+          <input style="background-color: white" type="text" readonly class="form-control" id="text" value="{{estudiante.0.curso}}" >
         </div>
       </div>
 
