--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_notas.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_alumno_notas.html
@@ -36,7 +36,7 @@
 <body>
   {% include "superior/Encabezado.html" %}
   {% include "superior/barra.html" %}
-  
+
   <div class="container-fluid">
     <div class="col-11 ml-5 mt-5">
       <div class="table-responsive">
@@ -46,7 +46,7 @@
             <tr>
               <th scope="col">Asignatura</th>
               {% for entrada in assignments %}
-                {% if ramo.ramo == entrada.ramos %}
+                {% if ramo.ramo == entrada.ramo %}
                   {% if entrada.curso.curso == estudiante.0.curso %}
                     <th scope="col">{{ entrada.titulo }} </th>
                   {% endif %}
@@ -58,35 +58,35 @@
           <tbody>
             <tr>
               <th scope="row">{{ramo}}</th>
-  
+
                     {% for nota in notas %}
-  
+
                       {% if estudiante.0.id == nota.estudiante.id %}
-  
+
                         {% for entrada in assignments %}
-  
+
                           {% if nota.curso_nota == entrada.curso.curso %}
-  
-                            {% if ramo.ramo == entrada.ramos %}
-  
-                              {% if nota.ramo_nota == entrada.ramos %}
-  
+
+                            {% if ramo.ramo == entrada.ramo %}
+
+                              {% if nota.ramo_nota == entrada.ramo %}
+
                                 {% if nota.titulo_nota == entrada.titulo %}
-  
+
                                     <td class="subjects">{{nota.nota}}</td>
-  
+
                                 {% endif %}
-  
+
                               {% endif %}
-  
+
                             {% endif %}
-  
+
                           {% endif %}
-  
+
                         {% endfor %}
-  
+
                       {% endif %}
-  
+
                     {% endfor %}
                     <td id="TotMarks"></td>
             </tr>
