--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_perfil_profesor.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_perfil_profesor.html
@@ -24,6 +24,7 @@
       <div class="jumbotron">
 
         <h1>Datos Personales</h1>
+        <hr class="my-4">
       <form>
         <div class="form-group row">
           <label for="staticEmail" class="col-sm-2 col-form-label">Nombre:</label>
@@ -48,7 +49,7 @@
           </div>
         </div>
       </form>
-      
+
     </div>
 
     </div>
