--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_cursos.html
@@ -8,7 +8,8 @@
 <div class="container-fluid">
 
   <div class="row ml-3 mt-3">
-    <div class="col-4">
+
+    <div class="col-4 mx-auto">
       <div class="jumbotron">
         <h1 class="display-4">Mis Ramos:</h1>
         <p class="lead">Seleccione que ramo quiere ver:</p>
@@ -21,56 +22,56 @@
               {% endfor %}
             </form>
           </div>
-        <hr class="my-4">
-        <div class="list-group" id="list-tab-{{forloop.counter}}" role="tablist">
-          <h1 class="display-4">Mis Cursos:</h1>
-          <p class="lead">Seleccione que curso quiere ver:</p>
-          {% for curso in cursos %}
-            <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home-{{forloop.counter}}" role="tab" aria-controls="home">{{curso}}</a>
-          {% endfor %}
         </div>
     </div>
-  </div>
 
-    <div class="col-8">
-      <div class="tab-content" id="nav-tabContent">
-        {% for curso in cursos %}
-        <div class="tab-pane fade" id="list-home-{{forloop.counter}}" role="tabpanel" aria-labelledby="list-home-list">
+      <div class="col-6 mx-auto">
 
-          <div class="float-none">
-            <a href="{% url 'curso_calificaciones' %}" class="btn btn-primary" role="button">Calificaciones Curso</a>
+        <div class="jumbotron">
+
+          <div class="list-group" id="list-tab-{{forloop.counter}}" role="tablist">
+            <h1 class="display-4">Mis Cursos:</h1>
+            <p class="lead">Seleccione que curso quiere ver:</p>
+            {% for curso in cursos %}
+              <a class="list-group-item list-group-item-action" id="list-home-list" data-toggle="list" href="#list-home-{{forloop.counter}}" role="tab" aria-controls="home">{{curso}}</a>
+            {% endfor %}
           </div>
 
-          <input type="text" id="filtro" onkeyup="filtrarNombres()" placeholder="Buscar alumno...">
+          <hr class="my-4">
+          <div class="tab-content" id="nav-tabContent">
+            {% for curso in cursos %}
+              <div class="tab-pane fade" id="list-home-{{forloop.counter}}" role="tabpanel" aria-labelledby="list-home-list">
 
-          <div class="table-responsive">
-            <table id="tablaAlumnos" class="table table-striped table-light table-sm" cellspacing="0" width="100%" >
-              <thead>
-                <th class="th-sm">Id</th>
-                <th class="th-sm">Nombre</th>
-                <th class="th-sm">Curso</th>
-              </thead>
-              <tbody>
-                {% for estudiante in estudiantes %}
-                  {% if estudiante.curso == curso.curso %}
-                    <tr style="transform: rotate(0);">
-                      <th scope="row"><a href="{% url 'alumno' user=estudiante.id %}" class="stretched-link">{{estudiante.id}}</a></th>
-                      <td>{{estudiante.nombre}}</td>
-                      <td>{{estudiante.curso}}</td>
-                    </tr>
-                  {% endif %}
-                {% endfor %}
-              </tbody>
-            </table>
+                <div class="table-responsive">
+                  <table id="tablaAlumnos" class="table table-striped table-light table-sm" cellspacing="0" width="100%" >
+                    <thead>
+                      <th class="th-sm">Id</th>
+                      <th class="th-sm">Nombre</th>
+                      <th class="th-sm">Curso</th>
+                    </thead>
+
+                    <tbody>
+                      {% for estudiante in estudiantes %}
+                        {% if estudiante.curso.curso == curso.curso %}
+                          <tr style="transform: rotate(0);">
+                            <th scope="row"><a href="{% url 'alumno' user=estudiante.id %}" class="stretched-link">{{estudiante.id}}</a></th>
+                            <td>{{estudiante.nombre}}</td>
+                            <td>{{estudiante.curso}}</td>
+                          </tr>
+                        {% endif %}
+                      {% endfor %}
+                    </tbody>
+                  </table>
+                </div>
+
+              </div>
+            {% endfor %}
           </div>
 
-        </div>
-        {% endfor %}
       </div>
     </div>
   </div>
 
 </div>
 <link rel="stylesheet" href="{% static 'css/prueba_tabla.css' %}">
-<script src="{% static 'js/tabla.js' %}"></script>
 {% endblock %}
