--- a/ProyectoIntro/plantillas/profesores/PSE_profesores_perfil_profesor.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores_perfil_profesor.html
@@ -5,15 +5,24 @@
 {% block title %} Perfil Profesor {% endblock %}
 
 {% block content %}
+<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Roboto+Slab:400,700|Material+Icons">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js%22%3E"></script>
+
 
 <div class="container-fluid">
 
   <div class="row ml-5 mt-3">
 
     <div class="col-9 col-sm-3">
-      <div class="card">
-        <img src="{{profesor.foto.url}}"  class="card-img-top"  alt="foto de perfil" height="300">
-        <div class="card-body">
+      <div class="card card-profile">
+        <div class="card-header card-header-image">
+          <img src="{{profesor.foto.url}}"  class="card-img-top"  alt="foto de perfil" height="300">
+        </div>
+          <div class="card-body">
           <h5 class="card-title">Perfil Profesor</h5>
         </div>
       </div>
@@ -56,4 +65,161 @@
 
   </div>
 </div>
+
+<style media="screen">
+  html *{
+    -webkit-font-smoothing: antialiased;
+  }
+
+  .card-title{
+    font-weight: 700 !important;
+    margin-top: 10px;
+    color: #3c4858;
+    font-family: Roboto Slab,Times New Roman,serif;
+  }
+  .card {
+    border: 0;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    border-radius: 6px !important;
+    color: rgba(0,0,0,.87);
+    background: #fff;
+    width: 100%;
+    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+  }
+
+  .card .card-body{
+    padding: .9375rem 1.875rem;
+  }
+
+  .card-description{
+    color: #999;
+  }
+
+  .card.card-profile{
+    text-align: center;
+  }
+  .card .card-header.card-header-image {
+    position: relative;
+    padding: 0;
+    z-index: 1;
+    margin-left: 15px;
+    margin-right: 15px;
+    margin-top: -30px;
+    border-radius: 6px;
+    max-height: 215px;
+  }
+
+  .card .card-header.card-header-image a {
+    display: block;
+  }
+
+  .card .card-header.card-header-image img {
+    width: 100%;
+    height: 215px;
+    border-radius: 6px;
+    pointer-events: none;
+    box-shadow: 0 5px 15px -8px rgba(0,0,0,.24), 0 8px 10px -5px rgba(0,0,0,.2);
+  }
+
+  .card .card-header.card-header-image .colored-shadow {
+    transform: scale(.94);
+    top: 12px;
+    filter: blur(12px);
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    z-index: -1;
+    transition: opacity .45s;
+    opacity: 1;
+  }
+
+  .card .card-header.card-header-image .card-title {
+    position: absolute;
+    bottom: 5px;
+    left: 15px;
+    color: #fff;
+    font-size: 1.125rem;
+    text-shadow: 0 2px 5px rgba(33,33,33,.5);
+    font-weight: 700;
+    font-family: 'Roboto Slab';
+  }
+
+  .card .card-category {
+    margin-top: 15px;
+    margin-bottom: 10px;
+  }
+
+  .card .card-body+.card-footer {
+    padding-top: 0;
+    border: 0;
+    border-radius: 6px;
+  }
+
+  .card .card-footer {
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    border: 0;
+  }
+
+  .card-profile .card-footer .btn.btn-just-icon{
+    font-size: 20px;
+    padding: 12px 13px;
+    line-height: 1em;
+  }
+
+  .card .card-footer {
+    padding: .9375rem 1.875rem;
+  }
+
+
+  .card-profile .card-body+.card-footer{
+    margin-top: -15px;
+  }
+  .card .text-info {
+    color: #00bcd4!important;
+  }
+
+  .card-profile .card-avatar {
+    width: 130px;
+    max-width: 130px;
+    max-height: 130px;
+    margin: -50px auto 0;
+    border-radius: 50%;
+    overflow: hidden;
+    padding: 0;
+    box-shadow: 0 16px 38px -12px rgba(0,0,0,.56), 0 4px 25px 0 rgba(0,0,0,.12), 0 8px 10px -5px rgba(0,0,0,.2);
+  }
+
+  .card-profile .card-avatar img{
+    width: 100%;
+  }
+  .card-profile .card-avatar+.card-body{
+    margin-top: 15px;
+  }
+
+  footer{
+    margin-top:100px;
+    color: #555;
+    background: #fff;
+    padding: 25px;
+    font-weight: 300;
+
+  }
+  .footer p{
+    margin-bottom: 0;
+  }
+  footer p a{
+    color: #555;
+    font-weight: 400;
+  }
+
+  footer p a:hover{
+    color: #9f26aa;
+    text-decoration: none;
+  }
+</style>
+
 {% endblock %}
