Preparando para grabar

--- a/ProyectoIntro/plantillas/profesores/PSE_profesores.html
+++ b/ProyectoIntro/plantillas/profesores/PSE_profesores.html
@@ -6,20 +6,13 @@
 
 <div class="container-fluid">
 	<div class="jumbotron jumbotron-fluid">
- 		<div class="container">
-    		<h1 class="display-4">BIENVENIDO!</h1>
-    		<p class="lead">EL TEXTO SIGUIENTE ES PARA PROBAR COMO LA BARRA MENU SE MANTIENE AL HACER SCROLL A LA PAGINA</p>
-    		<p>El calentamiento global es el aumento a largo plazo de la temperatura promedio del sistema climático de la Tierra. Es un aspecto primordial del cambio climático, demostrado por la medición directa de la temperatura y de varios efectos del calentamiento.1​2​ Los términos calentamiento global y cambio climático a menudo se usan indistintamente,3​ pero de forma más precisa calentamiento global es el incremento global en las temperaturas de superficie y su aumento proyectado causado predominantemente por actividades humanas (antrópico),4​ mientras que cambio climático incluye tanto el calentamiento global como sus efectos en el clima.5​ Si bien ha habido periodos prehistóricos de calentamiento global,6​ varios de los cambios observados desde mediados del siglo XX no han tenido precedentes desde décadas a milenios.1​7​
-
-			En 2013, el Quinto Informe de Evaluación (AR5) del Grupo Intergubernamental de Expertos sobre el Cambio Climático (IPCC) concluyó que «es extremadamente probable que la influencia humana ha sido la causa dominante del calentamiento observado desde la mitad del siglo xx».8​ La mayor influencia humana ha sido la emisión de gases de efecto invernadero como el dióxido de carbono, metano y óxidos de nitrógeno. Las proyecciones de modelos climáticos resumidos en el AR5 indicaron que durante el presente siglo la temperatura superficial global subirá probablemente 0,3 a 1,7 °C para su escenario de emisiones más bajas usando mitigación estricta y 2,6 a 4,8 °C para las mayores.9​ Estas conclusiones han sido respaldadas por las academias nacionales de ciencia de los principales países industrializados10​nota 1​ y no son disputadas por ninguna organización científica de prestigio nacional o internacional.12​
-
-			El cambio climático futuro y los impactos asociados serán distintos en una región a otra alrededor del globo.13​14​ Los efectos anticipados incluyen un aumento en las temperaturas globales, una subida en el nivel del mar, un cambio en los patrones de las precipitaciones y una expansión de los desiertos subtropicales.15​ Se espera que el calentamiento sea mayor en la tierra que en los océanos y que el más acentuado suceda en el Ártico, con el continuo retroceso de los glaciares, el permafrost y la banquisa. Otros efectos probables incluyen fenómenos meteorológicos extremos más frecuentes, tales como olas de calor, sequías, lluvias torrenciales y fuertes nevadas;16​ acidificación del océano y extinción de especies debido a regímenes de temperatura cambiantes. Entre sus impactos humanos significativos se incluye la amenaza a la seguridad alimentaria por la disminución del rendimiento de las cosechas y la pérdida de hábitat por inundación.17​18​ Debido a que el sistema climático tiene una gran inercia y los gases de efecto invernadero continuarán en la atmósfera por largo tiempo, muchos de estos efectos persistirán no solo durante décadas o siglos, sino por decenas de miles de años.19​
-
-			Las posibles respuestas al calentamiento global incluyen la mitigación mediante la reducción de las emisiones, la adaptación a sus efectos, la construcción de sistemas resilientes a sus impactos y una posible ingeniería climática futura. La mayoría de los países son parte de la Convención Marco de las Naciones Unidas sobre el Cambio Climático (CMNUCC),20​ cuyo objetivo último es prevenir un cambio climático antrópico peligroso.21​ La CMNUCC ha adoptado una serie de políticas destinadas a reducir las emisiones de gases de efecto invernadero22​23​24​25​ y ayudar en la adaptación al calentamiento global.22​25​26​27​ Los miembros de la CMNUCC han acordado que se requieren grandes reducciones en las emisiones28​ y que el calentamiento global futuro debe limitarse muy por debajo de 2,0 °C con respecto al nivel preindustrialnota 2​ con esfuerzos para limitarlo a 1,5 °C.30​31​
-
-			La reacción del público al calentamiento global y su preocupación a sus impactos también están aumentando. Un informe global de 2015 por Pew Research Center halló que una media de 54 % lo considera «un problema muy serio». Existen diferencias regionales significativas, con los estadounidenses y chinos, cuyas economías son responsables por las mayores emisiones anuales de CO2, entre los menos preocupados.32​</p>
-
-  		</div>
+		<div class="container">
+	    	<div class="col ml-4 mr-4">
+		    	<h1 class="display-4">¡Bienvenido a P.S.E. {{user.first_name}} {{user.last_name}}!</h1>
+	    		<hr class="my-4"></hr>
+	    		<p class="lead">Abra el menú para interactuar con la plataforma.</p>
+	    	</div>
+	    </div>
 	</div>
 </div>
 {% endblock %}
