--- a/ProyectoIntro/plantillas/superior/Encabezado.html
+++ b/ProyectoIntro/plantillas/superior/Encabezado.html
@@ -8,34 +8,24 @@
   <body>
     <div class="container-fluid">
 
-
       <div class="row">
-
-        <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 my-auto ml-5">
-          <img src="{% static 'images/logo_usm.png' %}" class="img-fluid" width="120"/>
-        </div>
-
-        <div class="col-4 col-sm-4 col-md-5 col-lg-5 col-xl-6  my-auto">
-            <div class="row font-weight-bold">
-              UNIVERSIDAD SANTA MARÍA
-            </div>
-            <div class="row font-weight-bold">
-              AÑO 2020
-            </div>
-        </div>
-
-        <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-2 mr-1 my-auto ">
-          <div class="row font-weight-bold">
-            {{ user.first_name }} {{ user.last_name }}
+        <div class="col">
+          <div class="float-left col-4 col-sm-4 col-md-5 col-lg-5 col-xl-6 mt-4 mb-4 ml-5">
+              <div class="row font-weight-bold">
+                UNIVERSIDAD SANTA MARÍA
+              </div>
+              <div class="row font-weight-bold">
+                AÑO 2020
+              </div>
           </div>
-        </div>
 
-        <div class="col-2 col-sm-2 col-md-2 col-lg-2 col-xl-1  my-auto">
-          <a href="{% url 'perfil_profesor' %}">
-            <img src="{{ user.profile.foto.url }}" class="img-fluid rounded" width="100"/>
-          </a>
-        </div>
+          <div class="float-right col-2 col-sm-2 col-md-2 col-lg-2 col-xl-1  mt-3 mb-3">
+            <a href="{% url 'perfil_profesor' %}">
+              <img src="{{ user.profile.foto.url }}" class="img-fluid rounded" width="100"/>
+            </a>
+          </div>
 
+      </div>
       </div>
 
     </div>
